# mmux

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  mmux.yaml
.github/homebrew/: mmux.rb
.github/scripts/: bump-formula.sh  render-formula.sh
.github/workflows/: _build.yml  ci.yml  healthcheck.yml  release.yml  yank.yml
assets/: og-image.src.html
ci/: boot-test.sh  smoke.sh  verify-distros.sh
docs/: 00-overview.md  01-quick-start.md  02-installation.md  03-usage.md  04-configuration.md  05-notifications.md  06-architecture.md  07-module-map.md  08-contributing.md
scripts/: clear-cloudflare-cache.sh
src/: agent.rs  agentmgr.rs  cli.rs  clipboard.rs  config.rs  git.rs  main.rs  notify.rs  open.rs  pane.rs  restore.rs  tmux.rs  update.rs  wizard.rs  workspacemgr.rs
src/app/: agentmgr.rs  diff.rs  git.rs  highlight.rs  input.rs  keymap.rs  lifecycle.rs  linkbrowse.rs  mod.rs  nav.rs  overlay.rs  persist.rs  picker.rs  procform.rs  session.rs
src/app/view/: git.rs  mod.rs  overlay.rs  pane.rs  sidebar.rs  theme.rs
src/config/: mod.rs  yaml.rs
web/: .dockerignore  DESIGN.md  Dockerfile  README.md  banner.txt  index.html  install.sh  llms.txt  nginx.conf  robots.txt  scenes.js  sitemap.xml  styles.css  tui.js
web/fonts/: README.md
