[package]
name = "mmux"
version = "0.6.3"
edition = "2021"
description = "A persistent terminal multiplexer for AI agents and dev processes"
license = "GPL-3.0-or-later"

[[bin]]
name = "mmux"
path = "src/main.rs"

[dependencies]
# TUI. ratatui 0.30 selects the crossterm 0.29 backend via this feature; we use
# `ratatui::crossterm` everywhere to avoid version skew (no standalone crossterm dep).
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
# PseudoTerminal widget; re-exports a compatible vt100 as `tui_term::vt100`.
tui-term = "0.3.4"
# PTY management.
portable-pty = "0.9"
# Config.
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# Errors + byte buffers for the writer channel.
anyhow = "1"
bytes = "1"
# Ripgrep's file-walking engine, used in-process for the Ctrl+P file picker's listing
# (gitignore/hidden/dir-prune handling) — so the picker needs no external `rg` on PATH.
ignore = "0.4"

[profile.release]
opt-level = 2
strip = true
