[package]
name = "mmux"
version = "0.12.1"
edition = "2021"
description = "A persistent terminal multiplexer for AI agents and dev processes"
license = "GPL-3.0-or-later"

[[bin]]
name = "mmux"
path = "src/main.rs"

[dependencies]
# TUI. ratatui 0.30 selects the crossterm 0.29 backend via this feature; we use
# `ratatui::crossterm` everywhere to avoid version skew (no standalone crossterm dep).
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
# PseudoTerminal widget; re-exports a compatible vt100 as `tui_term::vt100`.
tui-term = "0.3.4"
# PTY management.
portable-pty = "0.9"
# Config.
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# Errors + byte buffers for the writer channel.
anyhow = "1"
bytes = "1"
# Ripgrep's file-walking engine, used in-process for the Ctrl+P file picker's listing
# (gitignore/hidden/dir-prune handling) — so the picker needs no external `rg` on PATH.
ignore = "0.4"
# Decoding + resizing image files for the git panel's inline preview of a changed image.
# Default features off + only the formats that actually turn up in diffs, to keep build
# time and binary size in check.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
# Sixel encoder for the real-pixel image preview. mmux draws through tmux, and tmux (3.4+,
# sixel-enabled) renders sixel natively for capable terminals — so where the terminal
# supports it we get an actually-legible picture; elsewhere we fall back to half-blocks.
# A standalone encoder — lighter than pulling the whole ratatui-image widget stack.
icy_sixel = "0.5"
# Syntax highlighting for the git diff preview. `default-fancy` selects the pure-Rust
# `fancy-regex` backend (no oniguruma C dep) so the release cross-builds stay simple; it
# still bundles the default syntax + theme sets we load lazily on the first diff.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# vt100 0.16 drops rows scrolled out of a top-aligned partial scroll region instead
# of retaining them as history. Inline TUIs such as Codex use exactly that sequence
# to commit transcript lines. Keep this exact upstream PR commit until it is released.
[patch.crates-io]
vt100 = { git = "https://github.com/second-state/vt100-rust", rev = "ac79c37448d381ff9821a223ba487a6ac00f93cf" }

[profile.release]
opt-level = 2
strip = true
